<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87f6a3"
    tools:context=".Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Pers_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Personal_details_label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/background_dark"
                    android:ems="10"
                    android:hint="@string/firstname_label"
                    android:inputType="textPersonName"
                    android:textColorHighlight="@android:color/holo_green_dark"
                    android:textColorLink="@android:color/holo_green_light" />

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/background_dark"
                    android:ems="10"
                    android:hint="@string/Surname_label"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_dark"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/Dob_label"
                android:inputType="date"
                android:onClick="setDate" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Contact_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Contact_details_label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:ems="10"
                android:hint="@string/Address_label"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/Postcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:ems="10"
                android:hint="@string/Postcode_label"
                android:inputType="number" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:ems="10"
                android:hint="@string/mob_label"
                android:inputType="phone" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:ems="10"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Usage_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Usage_details_label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Nor_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="@string/nor_label"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/nor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/nor_label" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/enerprov_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="@string/enprov_label"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/enerprov"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/enprov_label" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/logindetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_details_label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:ems="10"
                android:hint="@string/uname_label"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:ems="10"
                android:hint="@string/pwd_label"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/conf_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:ems="10"
                android:hint="@string/conf_pwd_label"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/register_label"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/restextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>