<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aef55d">

    <TextView
        android:id="@+id/report_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/reports_heading"
        android:textSize="32sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_grp"
        android:layout_width="180dp"
        android:layout_height="194dp"
        android:layout_centerInParent="true"
        android:gravity="center">

        <RadioButton
            android:id="@+id/pie_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pie_Chart"
            android:textColorLink="@android:color/holo_green_dark"
            android:textStyle="bold" />/>

        <RadioButton
            android:id="@+id/bar_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bar_Chart"
            android:textColorLink="@android:color/holo_green_dark"
            android:textStyle="bold" />/>

        <RadioButton
            android:id="@+id/line_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/line_Chart"
            android:textColorLink="@android:color/holo_green_dark"
            android:textStyle="bold" />/>

    </RadioGroup>

    <Button
        android:id="@+id/generate_button"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/invalid_radio"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:background="@android:color/holo_green_dark"
        android:text="@string/generate_btn" />

    <TextView
        android:id="@+id/invalid_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp" />
</RelativeLayout>